tests/ui/lint/snapshots/fix_rest_only_slice_pattern_wildcard.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let xs = [1, 2, 3]
  let [..] = xs
}
=== fixed ===
fn main() {
  let xs = [1, 2, 3]
  let _ = xs
}
