tests/ui/lint/snapshots/fix_uninterpolated_fstring.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let msg = f"hello world";
  let _ = msg
}
=== fixed ===
fn main() {
  let msg = "hello world";
  let _ = msg
}
