tests/ui/lint/snapshots/fix_uninterpolated_fstring_collapses_brace_escapes.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let msg = f"a {{ b }}";
  let _ = msg
}
=== fixed ===
fn main() {
  let msg = "a { b }";
  let _ = msg
}
