tests/ui/lint/snapshots/fix_unnecessary_bool_float_ordering_negates_with_not.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(a: float64, b: float64) -> bool {
  if a < b { false } else { true }
}
=== fixed ===
pub fn f(a: float64, b: float64) -> bool {
  (!(a < b))
}
