tests/ui/lint/snapshots/fix_unnecessary_bool_negated.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(c: bool) -> bool {
  if c { false } else { true }
}
=== fixed ===
pub fn f(c: bool) -> bool {
  (!c)
}
