tests/ui/lint/snapshots/fix_unnecessary_bool_negates_comparison.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(a: int, b: int) -> bool {
  if a == b { false } else { true }
}
=== fixed ===
pub fn f(a: int, b: int) -> bool {
  (a != b)
}
