tests/ui/lint/snapshots/fix_unnecessary_bool_parenthesizes_loose_condition.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(a: int, b: int) -> bool {
  if a > b { true } else { false }
}
=== fixed ===
pub fn f(a: int, b: int) -> bool {
  (a > b)
}
