tests/ui/lint/snapshots/fix_unnecessary_bool_positive.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(c: bool) -> bool {
  if c { true } else { false }
}
=== fixed ===
pub fn f(c: bool) -> bool {
  c
}
