tests/ui/lint/snapshots/fix_unnecessary_first_then_check.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let xs = [1, 2, 3, 4]
  let _ = xs.get(0).is_some()
}
=== fixed ===
fn main() {
  let xs = [1, 2, 3, 4]
  let _ = !xs.is_empty()
}
