tests/ui/lint/snapshots/fix_unnecessary_lazy_evaluations.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(o: Option<int>) -> int {
  o.unwrap_or_else(|| 5)
}
=== fixed ===
pub fn f(o: Option<int>) -> int {
  o.unwrap_or(5)
}
