tests/ui/lint/snapshots/fix_unnecessary_map_on_constructor.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(x: int) -> Option<int> {
  Some(x).map(triple)
}

fn triple(n: int) -> int { n * 3 }
=== fixed ===
pub fn f(x: int) -> Option<int> {
  Some(triple(x))
}

fn triple(n: int) -> int { n * 3 }
